--- a/config.toml
+++ b/config.toml
@@ -20,7 +20,7 @@ preserveTaxonomyNames = true
 paginate = 10
 
 # Enable comments by entering your Disqus shortname
-disqusShortname = ""
+disqusShortname = "dusadrian"
 
 # Enable analytics by entering your Google Analytics tracking ID
 googleAnalytics = ""
@@ -72,7 +72,7 @@ defaultContentLanguageInSubdir = false
 
   # Discussion link (e.g. link to a forum, mailing list, or chat).
   #   Uncomment line below to use.
-  #   discussion = { name = "Discuss", url = "https://discourse.gohugo.io" }
+  discussion = { name = "Discuss", url = "https://discourse.gohugo.io" }
 
   # Diplay a logo in navigation bar rather than title (optional).
   #   To enable, place an image in `static/img/` and reference its filename below. To disable, set the value to "".
@@ -260,9 +260,14 @@ defaultContentLanguageInSubdir = false
   weight = 3
 
 [[menu.main]]
-  name = "Projects"
-  url = "#projects"
+  name = "Talks"
+  url = "#talks"
   weight = 4
+
+# [[menu.main]]
+#   name = "Projects"
+#   url = "#projects"
+#   weight = 5
 
 [[menu.main]]
   name = "Teaching"
