--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@
 
 # The URL of your website.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "https://www.adriandusa.eu/"
+baseurl = "https://adriandusa.eu/"
 
 # Title of your site
 title = ""
