--- a/config.toml
+++ b/config.toml
@@ -63,7 +63,7 @@ defaultContentLanguageInSubdir = false
 
   gravatar = true  # Get your avatar from Gravatar.com? (true/false)
   avatar = "portrait.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
-  email = "dusa.adrian@gmail.com"
+  email = "dusa.adrian@unibuc.ro"
   address = "Șoseaua Panduri nr.90-92, room 008"
   office_hours = "email for appointment"
   phone = "+40 740 147489"
