--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -14,8 +14,8 @@
   weight = 20
 
 [[main]]
-  name = "Talks"
-  url = "#talks"
+  name = "Software"
+  url = "#software"
   weight = 30
 
 [[main]]
@@ -24,19 +24,31 @@
   weight = 40
 
 [[main]]
+  name = "Talks"
+  url = "#talks"
+  weight = 50
+
+[[main]]
   name = "Projects"
   url = "#projects"
-  weight = 50
+  weight = 60
 
 [[main]]
   name = "Teaching"
   url = "#teaching"
-  weight = 60
+  weight = 70
+
+# Link to a PDF of your resume/CV from the menu.
+# To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
+[[main]]
+   name = "CV"
+   url = "files/2019-12-10-CV.pdf"
+   weight = 80
 
 [[main]]
   name = "Consultancy"
   url = "#consultancy"
-  weight = 70
+  weight = 90
 
 # [[main]]
 #   name = "Courses"
@@ -53,10 +65,3 @@
   name = "Contact"
   url = "#contact"
   weight = 100
-
-# Link to a PDF of your resume/CV from the menu.
-# To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
-# [[main]]
-#    name = "CV"
-#    url = "files/cv.pdf"
-#    weight = 70
